[gd_scene load_steps=13 format=3 uid="uid://cd77r01gxs0ud"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_k83nq"]
[ext_resource type="Script" path="res://scripts/fighting_camera.gd" id="2_6dae8"]
[ext_resource type="FontFile" uid="uid://d34npoo875jqj" path="res://Content/Art/HUD/PlayerFont.ttf" id="3_paiiu"]
[ext_resource type="Texture2D" uid="uid://danexq1ufr4qj" path="res://Content/Art/HUD/Player1Background.png" id="4_0uavl"]
[ext_resource type="Texture2D" uid="uid://rn80docoblmo" path="res://Content/Art/HUD/Player1Bar.png" id="5_mffto"]
[ext_resource type="Texture2D" uid="uid://byjay84lsnxmn" path="res://Content/Art/HUD/Player2Background.png" id="6_7qvqi"]
[ext_resource type="Texture2D" uid="uid://dtwd3l33vnpa4" path="res://Content/Art/HUD/Player2Bar.png" id="7_dgrbo"]
[ext_resource type="Script" path="res://scripts/results_screen.gd" id="9_bmxyn"]
[ext_resource type="Theme" uid="uid://bxve8gxn74gvo" path="res://menu_theme.tres" id="10_lagwi"]
[ext_resource type="Texture2D" uid="uid://6i8oddjlc7lg" path="res://Content/Art/Menu/CharacterSelect/Player1Select.png" id="11_j877c"]
[ext_resource type="Texture2D" uid="uid://cfv2oj5ulwqx8" path="res://Content/Art/Menu/CharacterSelect/Player2Select.png" id="12_d5gw3"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="13_jiiwd"]

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("fighter_camera", "game_fighters_and_stage", "game_projectiles", "game_hitboxes", "game_particles", "game_audio", "ui_splash_text", "ui_p1_health", "ui_p2_health", "ui_p1_name", "ui_p2_name", "ui_timer", "ui_p1_combo_counter", "ui_p2_combo_counter", "ui_p1_under_health_section", "ui_p2_under_health_section", "ui_p1_sidebar_section", "ui_p2_sidebar_section", "ui_p1_below_section", "ui_p2_below_section", "layer_hud", "layer_drama_freeze", "layer_results_screen", "layer_pause_screen", "layer_smooth_transistions", "pause_screen_node", "results_screen_node", "smooth_transition")]
script = ExtResource("1_k83nq")
fighter_camera = NodePath("FighterCamera")
game_fighters_and_stage = NodePath("FightersAndStage")
game_projectiles = NodePath("Projectiles")
game_hitboxes = NodePath("Hitboxes")
game_particles = NodePath("Particles")
game_audio = NodePath("Audio")
ui_splash_text = NodePath("HUD/BigText")
ui_p1_health = NodePath("HUD/HealthAndTime/P1Group/Health")
ui_p2_health = NodePath("HUD/HealthAndTime/P2Group/Health")
ui_p1_name = NodePath("HUD/HealthAndTime/P1Group/NameAndPosVel/Char")
ui_p2_name = NodePath("HUD/HealthAndTime/P2Group/NameAndPosVel/Char")
ui_timer = NodePath("HUD/HealthAndTime/Time")
ui_p1_combo_counter = NodePath("HUD/P1_Side_UI/P1Stats/Combo")
ui_p2_combo_counter = NodePath("HUD/P2_Side_UI/P2Stats/Combo")
ui_p1_under_health_section = NodePath("HUD/HealthAndTime/P1Group")
ui_p2_under_health_section = NodePath("HUD/HealthAndTime/P2Group")
ui_p1_sidebar_section = NodePath("HUD/P1_Side_UI/Special")
ui_p2_sidebar_section = NodePath("HUD/P2_Side_UI/Special")
ui_p1_below_section = NodePath("HUD/UI_Lower/Special/P1")
ui_p2_below_section = NodePath("HUD/UI_Lower/Special/P2")
layer_hud = NodePath("HUD")
layer_drama_freeze = NodePath("DramaticFreezes")
layer_results_screen = NodePath("ResultsScreen")
layer_pause_screen = NodePath("PauseScreen")
layer_smooth_transistions = NodePath("SmoothTransitionLayer")
pause_screen_node = NodePath("PauseScreen/PauseScreen")
results_screen_node = NodePath("ResultsScreen/ResultsScreen")
smooth_transition = NodePath("SmoothTransitionLayer/ColorRect")

[node name="FighterCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.269, 7.742)
projection = 1
current = true
size = 3.5
script = ExtResource("2_6dae8")

[node name="Audio" type="Node3D" parent="."]

[node name="Particles" type="Node3D" parent="."]

[node name="Hitboxes" type="Node3D" parent="."]

[node name="Projectiles" type="Node3D" parent="."]

[node name="FightersAndStage" type="Node3D" parent="."]

[node name="DramaticFreezes" type="CanvasLayer" parent="."]
layer = 10

[node name="HUD" type="CanvasLayer" parent="."]
layer = 20

[node name="BigText" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -135.0
offset_right = 281.5
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 219
text = "FIGHT"
horizontal_alignment = 1

[node name="HealthAndTime" type="HBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 337.0
grow_horizontal = 2
theme_override_constants/separation = 100
alignment = 1

[node name="P1Group" type="VBoxContainer" parent="HUD/HealthAndTime"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Health" type="TextureProgressBar" parent="HUD/HealthAndTime/P1Group"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
value = 10.0
fill_mode = 1
texture_under = ExtResource("4_0uavl")
texture_progress = ExtResource("5_mffto")

[node name="NameAndPosVel" type="HBoxContainer" parent="HUD/HealthAndTime/P1Group"]
layout_mode = 2
alignment = 2

[node name="Char" type="Label" parent="HUD/HealthAndTime/P1Group/NameAndPosVel"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 64
text = "Player 1 Character"

[node name="Time" type="Label" parent="HUD/HealthAndTime"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 64
text = "999"
horizontal_alignment = 1

[node name="P2Group" type="VBoxContainer" parent="HUD/HealthAndTime"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="Health" type="TextureProgressBar" parent="HUD/HealthAndTime/P2Group"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
value = 10.0
texture_under = ExtResource("6_7qvqi")
texture_progress = ExtResource("7_dgrbo")

[node name="NameAndPosVel" type="HBoxContainer" parent="HUD/HealthAndTime/P2Group"]
layout_mode = 2
alignment = 2

[node name="Char" type="Label" parent="HUD/HealthAndTime/P2Group/NameAndPosVel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 64
text = "Player 2 Character"
horizontal_alignment = 2

[node name="P1_Side_UI" type="HBoxContainer" parent="HUD"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 96.0
grow_vertical = 2

[node name="Special" type="Control" parent="HUD/P1_Side_UI"]
layout_mode = 2

[node name="P1Stats" type="VBoxContainer" parent="HUD/P1_Side_UI"]
layout_mode = 2
alignment = 1

[node name="Combo" type="Label" parent="HUD/P1_Side_UI/P1Stats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 60
text = "999"

[node name="P2_Side_UI" type="HBoxContainer" parent="HUD"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
grow_horizontal = 0
grow_vertical = 2

[node name="P2Stats" type="VBoxContainer" parent="HUD/P2_Side_UI"]
layout_mode = 2
alignment = 1

[node name="Combo" type="Label" parent="HUD/P2_Side_UI/P2Stats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_paiiu")
theme_override_font_sizes/font_size = 60
text = "999"
horizontal_alignment = 2

[node name="Special" type="Control" parent="HUD/P2_Side_UI"]
layout_mode = 2

[node name="UI_Lower" type="VBoxContainer" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
alignment = 2

[node name="Special" type="HBoxContainer" parent="HUD/UI_Lower"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 30
alignment = 1

[node name="P1" type="Control" parent="HUD/UI_Lower/Special"]
layout_mode = 2

[node name="P2" type="Control" parent="HUD/UI_Lower/Special"]
layout_mode = 2

[node name="ResultsScreen" type="CanvasLayer" parent="."]
layer = 30
visible = false

[node name="ResultsScreen" type="Control" parent="ResultsScreen" node_paths=PackedStringArray("p1_select_icon", "p2_select_icon", "p1_winner_icon", "p2_winner_icon", "no_winner_icon", "winner_quote")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_bmxyn")
p1_choice_positions = Array[Vector2]([Vector2(780, 806), Vector2(535, 918), Vector2(625, 1015)])
p2_choice_positions = Array[Vector2]([Vector2(1145, 806), Vector2(1387, 918), Vector2(1293, 1017)])
p1_select_icon = NodePath("ColorRect/P1SelectIcon")
p2_select_icon = NodePath("ColorRect/P2SelectIcon")
p1_winner_icon = NodePath("ColorRect/P1Winner")
p2_winner_icon = NodePath("ColorRect/P2Winner")
no_winner_icon = NodePath("ColorRect/NoWinner")
winner_quote = NodePath("ColorRect/WinnerQuote")

[node name="ColorRect" type="ColorRect" parent="ResultsScreen/ResultsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.360784)

[node name="Label" type="Label" parent="ResultsScreen/ResultsScreen/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -69.0
offset_right = 89.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 86
text = "Restart Fight
Return to Character Select
Return to Main Menu"
horizontal_alignment = 1

[node name="P1Winner" type="Label" parent="ResultsScreen/ResultsScreen/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -788.0
offset_right = 440.0
offset_bottom = -595.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 156
text = "PLAYER 1 WINS"
horizontal_alignment = 1

[node name="P2Winner" type="Label" parent="ResultsScreen/ResultsScreen/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -788.0
offset_right = 440.0
offset_bottom = -595.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 156
text = "PLAYER 2 WINS"
horizontal_alignment = 1

[node name="NoWinner" type="Label" parent="ResultsScreen/ResultsScreen/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -788.0
offset_right = 440.0
offset_bottom = -595.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 156
text = "DRAW"
horizontal_alignment = 1

[node name="WinnerQuote" type="Label" parent="ResultsScreen/ResultsScreen/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -509.5
offset_top = -526.0
offset_right = 510.5
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 81
text = "PLAYER 1 WINS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="P1SelectIcon" type="Sprite2D" parent="ResultsScreen/ResultsScreen/ColorRect"]
position = Vector2(780, 806)
texture = ExtResource("11_j877c")

[node name="P2SelectIcon" type="Sprite2D" parent="ResultsScreen/ResultsScreen/ColorRect"]
position = Vector2(1145, 804)
texture = ExtResource("12_d5gw3")

[node name="PauseScreen" type="CanvasLayer" parent="."]
layer = 40
visible = false

[node name="PauseScreen" type="Control" parent="PauseScreen" node_paths=PackedStringArray("p1_select_icon", "p2_select_icon", "main_screen", "command_list_screen", "cmd_list_p1_scroll", "cmd_list_p2_scroll", "p1_cmd_list", "p2_cmd_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_jiiwd")
p1_choice_positions = Array[Vector2]([Vector2(751, 808), Vector2(529, 918), Vector2(625, 1015)])
p2_choice_positions = Array[Vector2]([Vector2(1174, 808), Vector2(1394, 918), Vector2(1293, 1015)])
p1_select_icon = NodePath("Main/P1SelectIcon")
p2_select_icon = NodePath("Main/P2SelectIcon")
main_screen = NodePath("Main")
command_list_screen = NodePath("CommandList")
cmd_list_p1_scroll = NodePath("CommandList/HBox/P1Scroll")
cmd_list_p2_scroll = NodePath("CommandList/HBox/P2Scroll")
p1_cmd_list = NodePath("CommandList/HBox/P1Scroll/P1Commands")
p2_cmd_list = NodePath("CommandList/HBox/P2Scroll/P2Commands")

[node name="Main" type="ColorRect" parent="PauseScreen/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.360784)

[node name="Label" type="Label" parent="PauseScreen/PauseScreen/Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -69.0
offset_right = 89.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 86
text = "Command List
Return to Character Select
Return to Main Menu"
horizontal_alignment = 1

[node name="P1SelectIcon" type="Sprite2D" parent="PauseScreen/PauseScreen/Main"]
position = Vector2(751, 808)
texture = ExtResource("11_j877c")

[node name="P2SelectIcon" type="Sprite2D" parent="PauseScreen/PauseScreen/Main"]
position = Vector2(1174, 808)
texture = ExtResource("12_d5gw3")

[node name="CommandList" type="ColorRect" parent="PauseScreen/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.686275)

[node name="Label" type="Label" parent="PauseScreen/PauseScreen/CommandList"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 64
text = "Commands (Facing Right)"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PauseScreen/PauseScreen/CommandList"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_lagwi")
theme_override_font_sizes/font_size = 64
text = "Press Start to Exit"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="PauseScreen/PauseScreen/CommandList"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 98.0
offset_top = 89.0
offset_right = -98.0
offset_bottom = 991.365
grow_horizontal = 2
alignment = 1

[node name="P1Scroll" type="ScrollContainer" parent="PauseScreen/PauseScreen/CommandList/HBox"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="P1Commands" type="VBoxContainer" parent="PauseScreen/PauseScreen/CommandList/HBox/P1Scroll"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="P2Scroll" type="ScrollContainer" parent="PauseScreen/PauseScreen/CommandList/HBox"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="P2Commands" type="VBoxContainer" parent="PauseScreen/PauseScreen/CommandList/HBox/P2Scroll"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="SmoothTransitionLayer" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="ColorRect" type="ColorRect" parent="SmoothTransitionLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="choices_made" from="ResultsScreen/ResultsScreen" to="." method="results_screen_choices_logic"]
[connection signal="exited" from="PauseScreen/PauseScreen" to="." method="end_pause_menu"]
